src/objects/Orden_de_trabajo__mdt.object
<CustomObject>
    <description>Metadatos referentes al objeto órdenes de trabajo</description>
    <fields>
        <fullName>MTD_OTR_CAS_Bloquea_Semaforo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Representa la casilla que estando marcado hace que se setee el campo subestado del caso, y por lo tanto, se bloquea el contador del caso</description>
        <label>Setea Subestado Caso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTD_OTR_CAS_Espera_Bloqueo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check de los estados en espera para el bloqueo del contador del generador de tareas</description>
        <label>En espera con bloqueo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTD_OTR_CAS_Evento__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Representa si se genera un evento de penalización a un profesional cuando pasa el semáforo de un estado de verde a amarillo</description>
        <label>Evento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTD_OTR_CAS_Tarea__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox que determinará si es necesario añadir una tarea</description>
        <label>Tarea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTD_OTR_NUM_Duracion_estimada__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Campo numérico que contendrá el número de días que se añadirán a la fecha de cambio de estado para calcular la fecha de vencimiento de la tarea</description>
        <label>Duración estimada</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_OTR_NUM_Horas_amarillo__c</fullName>
        <description>Campo numérico que almacena el número de Días que una orden de trabajo se considera en estado de semáforo “amarillo”.</description>
        <label>Días amarillo</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_OTR_NUM_Horas_verde__c</fullName>
        <description>Campo numérico que almacena el número de Días que una orden de trabajo se considera en estado de semáforo “verde”.</description>
        <label>Dias verde</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_OTR_SEL_Gremio__c</fullName>
        <label>Gremio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>21</fullName>
                    <default>true</default>
                    <label>21</label>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>37</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>41</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>49</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>57</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>73</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>38</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>56</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTD_OTR_SEL_Prioridad__c</fullName>
        <label>Prioridad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No urgente</fullName>
                    <default>true</default>
                    <label>No urgente</label>
                </value>
                <value>
                    <fullName>Urgente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTD_OTR_TXT_Codigo_Postal__c</fullName>
        <label>Codigo Postal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTD_OTR_TXT_Compania__c</fullName>
        <description>campo texto que contendrá el código asociado a la compañía aseguradora</description>
        <label>Compañía</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTD_OTR_TXT_Descripcion_Tarea__c</fullName>
        <description>Cuerpo de la tarea que se muestra en comentarios</description>
        <label>Descripción de Tarea</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MTD_OTR_TXT_Estado__c</fullName>
        <label>Estado</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTD_OTR_TXT_Suceso__c</fullName>
        <label>Suceso</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTD_OTR_TXT_Tipo_Tarea__c</fullName>
        <description>Representa el tipo de tarea que representa el cambio de estado</description>
        <label>Tipo de Tarea</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Orden de trabajo</label>
    <listViews>
        <fullName>Configuracion_Estados_Orden_Trabajo</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>MTD_OTR_TXT_Compania__c</columns>
        <columns>MTD_OTR_NUM_Horas_amarillo__c</columns>
        <columns>MTD_OTR_NUM_Horas_verde__c</columns>
        <columns>MTD_OTR_CAS_Tarea__c</columns>
        <columns>MTD_OTR_TXT_Tipo_Tarea__c</columns>
        <columns>MTD_OTR_NUM_Duracion_estimada__c</columns>
        <columns>MTD_OTR_TXT_Descripcion_Tarea__c</columns>
        <columns>MTD_OTR_TXT_Estado__c</columns>
        <columns>MTD_OTR_CAS_Bloquea_Semaforo__c</columns>
        <columns>MTD_OTR_CAS_Evento__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MTD_OTR_TXT_Compania__c</field>
            <operation>equals</operation>
            <value>555001</value>
        </filters>
        <label>Configuración Estados Orden de Trabajo</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>GENERICO</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>MTD_OTR_TXT_Compania__c</columns>
        <columns>MTD_OTR_CAS_Bloquea_Semaforo__c</columns>
        <columns>MTD_OTR_CAS_Tarea__c</columns>
        <columns>MTD_OTR_SEL_Prioridad__c</columns>
        <columns>MTD_OTR_CAS_Evento__c</columns>
        <columns>MTD_OTR_TXT_Estado__c</columns>
        <columns>MTD_OTR_TXT_Tipo_Tarea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MTD_OTR_TXT_Compania__c</field>
            <operation>equals</operation>
            <value>0000</value>
        </filters>
        <label>GENÉRICO</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Holiday_Gym</fullName>
        <columns>MasterLabel</columns>
        <columns>MTD_OTR_TXT_Estado__c</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>MTD_OTR_CAS_Tarea__c</columns>
        <columns>MTD_OTR_CAS_Evento__c</columns>
        <columns>MTD_OTR_CAS_Bloquea_Semaforo__c</columns>
        <columns>MTD_OTR_CAS_Espera_Bloqueo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>Holi</value>
        </filters>
        <label>Holiday Gym</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>HomeServe</fullName>
        <columns>MasterLabel</columns>
        <columns>MTD_OTR_TXT_Estado__c</columns>
        <columns>MTD_OTR_CAS_Espera_Bloqueo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>HomeServe</value>
        </filters>
        <label>HomeServe</label>
        <language>es</language>
    </listViews>
    <pluralLabel>Órdenes de trabajo</pluralLabel>
</CustomObject>